fix: fixed accessibility issues with color contrast and role attribute

--- a/css/styles.css
+++ b/css/styles.css
@@ -125,7 +125,7 @@ nav h1 a {
 .filter-options {
   width: 100%;
   height: 50px;
-  background-color: #3397DB;
+  background-color: #005e8f;
   align-items: center;
   display: flex; /* changed display to flex */
 }
@@ -203,12 +203,17 @@ nav h1 a {
 
 @media screen and (min-width:900px) and (max-width:969px) {
   #restaurants-list li {
-    width: 22%;
+    width: 22.3%;
   }
 }
 @media screen and (min-width:970px)  {
   #restaurants-list li {
-    width: 15%;
+    width: 23.3%;
+  }
+}
+@media screen and (min-width:1150px)  {
+  #restaurants-list li {
+    width: 24.4444%;
   }
 }
 @media screen and (min-width:1373px) {
@@ -226,7 +231,7 @@ nav h1 a {
   align-self: flex-start; /* added flex item align*/
 }
 #restaurants-list li h1 {
-  color: #f18200;
+  color: #b56000;
   font-family: Arial,sans-serif;
   font-size: 14pt;
   font-weight: 200;
@@ -243,7 +248,7 @@ nav h1 a {
   align-self: center; /* added flex item align*/
 }
 #restaurants-list li a {
-  background-color: orange;
+  background-color: #7d4f00;
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
